[package]
name = "luckperms-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde_json = "1"
thiserror = "1"
form_urlencoded = "1.2.0"
url = "2.4.0"

[dependencies.reqwest]
version = "0.11.6"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1.4"
features = ["serde", "v4"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }